--- a/RL/层次推理/层次推理.md
+++ b/RL/层次推理/层次推理.md
@@ -1,6 +1,7 @@
 - [GitHub - AGI-Edgerunners/LLM-Planning-Papers: Must-read Papers on Large Language Model (LLM) Planning.](https://github.com/AGI-Edgerunners/LLM-Planning-Papers)
 - [GitHub - atfortes/LLM-Reasoning-Papers: Collection of papers and resources on Reasoning in Large Language Models (LLMs), including Chain-of-Thought (CoT), Instruction-Tuning, and others.](https://github.com/atfortes/LLM-Reasoning-Papers)
 
+后续工作迁移至飞书文档：[飞书 - 登录](https://fudannlp.feishu.cn/docx/S4Y3dlY9soSZXDx0TAyc9IwXnQb)
 ## Hierarchies/Meta-learning
 ### RL+Hierarchies
 - 传统的多层次RL训练通常被运用于**机器人**领域，负责**多个子任务**的学习与泛化；
@@ -10,11 +11,12 @@
 - [[2002.05954] Learning Functionally Decomposed Hierarchies for Continuous Control Tasks with Path Planning](https://arxiv.org/abs/2002.05954)
 - [[Q-Transformer：Scalable Offline Reinforcement Learning via Autoregressive Q-Functions]]
 
-能否把推理的整个过程，拆解成几个基本动作（比如预测/评估/验证）；
+能否把推理的整个过程，拆解成几个基本动作（比如推理预测/评估/验证）；
+现有的算法通常是固定的若干个action以一定顺序依次执行；那么我们能否训练一个master policy，自主决策采取什么action；
 - 训练LLM+RL master policy的层次policy；
 	- task-specific LLM分别处理辅助推理任务的action，比如reflexion；
 	- 这些动作之间的地位如何？平级的，还是有优先级？reward怎么定义？
-	- 现有的算法通常是固定的若干个action以一定顺序依次执行；那么我们能否训练一个master policy，自主决策采取什么action；
+	- 任务选择什么？经典的planning任务还是math？math更具挑战性一些；
 
 ## Math
 - math的困难在于根本没法（？）把规则全部表示出来然后使用专门的推理器（在符号逻辑/planning领域有专门的推理器），只能让LLM来完成基本的推理动作；
@@ -38,7 +40,7 @@
 - Improving Large Language Model Fine-tuning for Solving Math Problems
 	- [论文分享：Improving Large Language Model Fine-tuning For Solving Math Problems - 知乎](https://zhuanlan.zhihu.com/p/667243909)
 	- 作者指出这样一个现象：针对一个数学问题，PaLM2一次输出正确答案（Pass@1）的概率是很低的，但当其重复输出64次（在较高的温度设定下，Pass@64），命中正确答案的概率提升到67.8%。这就说明：**PaLM2有能力生成正确答案，但其无法判断生成的答案是否正确。**
-	- 
+
 
 ## Planning/Reasoning
 
@@ -51,8 +53,8 @@
 	- planning的边界，定义，四个问题，但是结论比较显然，没什么insight；
 	- 衡量：对 LLM 生成的计划与最佳计划使用基于动作的标准，即两个计划中动作顺序之间的汉明距离；
 - LLM不懂**逻辑**；
-- [Towards Understanding Chain-of-Thought Prompting: An Empirical Study of What Matters - 知乎](https://zhuanlan.zhihu.com/p/661161200)指出，CoT示例，给的这些demonstration更多的不是去教LLM怎么去推理，而是给出了某种output format/space，告诉LLMs应该生成这样看上去一步一步的解，同时这些解需要跟原问题相关的，同时也要follow正常的顺序；但实际里面的推理**不需要是对的**，因此它没有真的学习，而是引出预训练中得到的推理能力。
-- 
+- [Towards Understanding Chain-of-Thought Prompting: An Empirical Study of What Matters - 知乎](https://zhuanlan.zhihu.com/p/661161200)指出，CoT示例，给的这些demonstration更多的不是去教LLM怎么去推理，而是给出了某种**output format/space**，告诉LLMs应该生成这样看上去一步一步的解，同时这些解需要跟原问题相关的，同时也要follow正常的顺序；但实际里面的推理**不需要是对的**，因此它没有真的学习，而是引出**预训练**中得到的推理能力。
+
 
 ### setting/motivation
 - 从LLM训练过程、基本架构来看，其在进行文本生成的过程中，并不具备严谨推理所需的规则匹配、状态转移、搜索等要素；
